- finished setup page

--- a/templates/raffle.html
+++ b/templates/raffle.html
@@ -8,7 +8,7 @@
         div#digits span.selected { color: #ff3333; }
         div#results table { width: 100%; }
         div#results table td { text-align: center; }
-        div#count { text-align: center }
+        div#count { text-align: center; font-weight: bold }
     </style>
   </head>
   <body>
