--- a/templates/setup.html
+++ b/templates/setup.html
@@ -2,6 +2,9 @@ $def with (count, msg=None, error=None)
 <html>
   <head>
     <title>Raffle Setup</title>
+    <style>
+        * { font-family: helvetica, arial; }
+    </style>
   </head>
   <body>
     <div style="text-align:right">
