raffle number in 2 lines

--- a/templates/raffle.html
+++ b/templates/raffle.html
@@ -5,7 +5,7 @@
         * { font-family: helvetica, arial; }
         input#number { font-size: 56pt; text-align: center;}
         table#digits { text-align: center; font-size: 28pt; font-weight: bold; width: 90%}
-        table#digits tr td.digits { color: #cccccc; text-align: right}
+        table#digits tr td.digits { font-size: 42pt; color: #cccccc; text-align: center}
         table#digits span.selected { color: #ff3333; }
         div#results table { width: 100%; }
         div#results table td { text-align: center; }
@@ -22,11 +22,11 @@
       <table id="digits">
         <tr><td>Tambiolo <span id="tnum">1</span>: </td>
           <td class="digits">
-          <span id="d0">0</span> &nbsp;
+          &nbsp;<span id="d0">0</span> &nbsp;
           <span id="d1">1</span> &nbsp;
           <span id="d2">2</span> &nbsp;
           <span id="d3">3</span> &nbsp;
-          <span id="d4">4</span> &nbsp;
+          <span id="d4">4</span> <br/>
           <span id="d5">5</span> &nbsp;
           <span id="d6">6</span> &nbsp;
           <span id="d7">7</span> &nbsp;
